# Typstify

./: Cargo.toml  HLSWeakObjectWrapper.m  README.md  SwizzleHelper.h  Typstify-Bridging-Header.h  build.rs
Typstify/: ContentView.swift  DocumentView.swift  EditorView.swift  FileManagerExtension.swift  HLSRuntime.m  Hashing.swift  Info.plist  PDFKitView.swift  PhotosPickerItemExtension.swift  README.md  Typstify-Bridging-Header.h  TypstifyApp.swift  TypstifyDocument.swift  TypstifyDocumentView.swift  ViewContext.swift  ViewExtension.swift  build-rust.sh
Typstify.xcodeproj/: project.pbxproj
Typstify.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Typstify.xcodeproj/xcuserdata/cubik65536.xcuserdatad/xcschemes/: xcschememanagement.plist
Typstify/Typstify/: AppDelegate.swift  ContentView.swift  HLSRuntime.h  HLSWeakObjectWrapper.h  Info.plist  SwizzleHelper.m  TypstifyApp.swift  TypstifyDocument.swift
Typstify/Typstify.xcodeproj/: project.pbxproj
Typstify/Typstify.xcodeproj/project.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Typstify/Typstify.xcodeproj/xcuserdata/cubik65536.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
Typstify/Typstify.xcodeproj/xcuserdata/cubik65536.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: lib.rs  typst_wrapper_world.rs
